--- a/Complete Python/conditional statements.ipynb
+++ b/Complete Python/conditional statements.ipynb
@@ -5,7 +5,7 @@
    "id": "49ed4100-37ed-4996-9454-2bff92a22c0d",
    "metadata": {},
    "source": [
-    "# if Statement"
+    "# if else Statement"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter a number 5\n"
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 101\n"
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 17\n"
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 45\n"
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 0\n"
